# prisma-streamlit-example

./: .gitignore  README.md  data.py  dev.db  main.py  pyproject.toml  schema.prisma
