[tool.poetry]
name = "prisma-streamlit-example"
version = "0.1.0"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
prisma = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
